--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
 
-    <h1>Hola mundo</h1>
+    <h1>Hola mundo SDSAFDSAD</h1>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
